--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <style>
       @import "./src/style.css";
+      @import "node_modules/c3/c3.min.css"
     </style>
-    <title>JSDev</title>
+    <title>Arslanian Bros Sales</title>
   </head>
   <body>
-    <h1>Alright. You're set.</h1>
-    <h2>Now build something amazing!</h2>
-    <button type="button">Click Me!</button>
+
+   <div id="chart"></div>
+   <h1>Arslanian Sales Chart</h1>
 
     <script type="module">
       import "./src/index.js";
